07-21-2022 - Cleaned up the application.properties environment variables
07-27-2022 - Enhanced unstructured data types to preserve the file name when copying the data to raw-plus

v2.2.3
08-01-2022 - Changed API calls to validate the api-key
08-02-2022 - Added support for the AWS Marketplace Metering API calls
08-02-2022 - On app startup, for RDS, creating the default database and required tables if they do not exist
08-03-2022 - Added region to the pipeline environment for the Glue catalog

v2.2.4
08-10-2022 - Removed the RDS database dependencies and moved all dataset and trigger status data into DynamoDb
08-12-2022 - Moved the TriggerLogger logic to the TriggerLoggerTemplate
08-12-2022 - Moved API key retrieval to Secrets Manager
08-23-2022 - Support for stand-alone EMR clusters without EKS
08-31-2022 - Fixed issues with the Dataset Status objects being returned from the REST API
09-23-2022 - Fixed issues with the AWS Marketplace Metering API calls

v2.3.0
12-20-2022 - Major refactoring of the IData pipeline-core Github project (private) into this pipeline-server (open-source) project, removed spark (EMR, EKS on EMR) dependencies
12-20-2022 - Refactored to leverage Athena for parquet generation for more efficiency
12-21-2022 - Refactored the dataset configuration logic
01-04-2023 - Added 'Lakehouse' object store support using Athena with Apache Iceberg integration (https://iceberg.apache.org/)
01-31-2023 - Refactored data quality, deduplication and row level data transformations (javascript)

v2.3.2
05-18-2023 - Bug fix - dataset status UI REST API was not reporting the proper status for some ingestion types

v2.3.3
05-22-2023 - Bug fix - Fixed a UI status issue for errors in the dataset run
06-30-2023 - Moved the test files and test javascript samples to ./test-scripts
08-09-2023 - New feature - Added a database source for pulling data from Postgres based upon a cron value into the pipeline