@@ -246,4 +246,6 @@ v2.3.2
 v2.3.3
 05-22-2023 - Bug fix - Fixed a UI status issue for errors in the dataset run
 06-30-2023 - Moved the test files and test javascript samples to ./test-scripts
-08-09-2023 - New feature - Added a database source for pulling data from Postgres based upon a cron value into the pipeline
+08-09-2023 - New feature - Added a database source for pulling data from Postgres based upon a dataset configuration cron value into the pipeline
+08-10-2023 - Added support for pulling data from Microsoft SQL Server
+08-11-2023 - Added support for pulling data from MySQL
